Design change - Use `leaf_ids` instead of `node_indicators` for much better large-sample deep-tree performance
The `update_data` function and `LogisticBART` are yet to be changed and tested.

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 33.62it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 44.03it/s] \n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 60.49it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:07<00:00, 69.45it/s]\n"
      ]
     },
     {
@@ -131,6 +131,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "np.float64(8.8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([len(arr) for arr in arrays])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -144,23 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Val: 0.020323725 (leaf, n = 750)\n",
-      "[-1 -2 -2 -2 -2 -2 -2 -2]\n",
-      "[0.02032373        nan        nan        nan        nan        nan\n",
-      "        nan        nan]\n"
+      "X_0 <= 0.763697386 (split, n = 750)\n",
+      "\tX_1 <= 0.514178932 (split, n = 562)\n",
+      "\t\tVal: -0.000567849 (leaf, n = 294)\n",
+      "\t\tVal: 0.024965148 (leaf, n = 268)\n",
+      "\tX_1 <= 0.092173070 (split, n = 188)\n",
+      "\t\tVal: 0.014175146 (leaf, n = 8)\n",
+      "\t\tVal: -0.013555540 (leaf, n = 180)\n",
+      "[ 0  1  1 -1 -1 -1 -1 -2]\n",
+      "[        nan         nan         nan -0.00056785  0.02496515  0.01417515\n",
+      " -0.01355554         nan]\n"
      ]
     }
    ],
    "source": [
     "from bart_playground import visualize_tree\n",
-    "tree_sp : Tree = bart.sampler.trace[-1].trees[90]\n",
+    "tree_sp : Tree = bart.sampler.trace[-1].trees[50]\n",
     "\n",
     "print(tree_sp)\n",
     "print(tree_sp.vars)\n",
@@ -169,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-30 12:43:39,796:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-07-05 14:39:00,740:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -203,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +241,7 @@
        " 'btz': 0.01451765109911874}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +292,7 @@
        "0.08625514042334204"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
