--- a/notebooks/01_debug_incdata.ipynb
+++ b/notebooks/01_debug_incdata.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 150/150 [00:07<00:00, 20.48it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:05<00:00, 29.30it/s] \n"
      ]
     }
    ],
@@ -72,14 +72,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 89/89 [00:16<00:00,  5.31it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 82.18it/s]\n"
+      "  0%|          | 0/89 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:10<00:00,  8.15it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 130.79it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bart_playground.bart.DefaultBART at 0x7b01cda09850>"
+       "<bart_playground.bart.DefaultBART at 0x707d212facd0>"
       ]
      },
      "execution_count": 4,
@@ -110,11 +117,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 1 3 1 2 2 1 1 1 2 4 1 2 1 2 2 1 0 2 1 1 1 1 1 2 0 2 1 3 1 1 2 4 3 2 0 2\n",
-      " 2 2 1 1 2 2 1 1 2 3 1 2 1 3 1 1 1 2 1 3 1 2 5 3 2 1 1 1 2 2 1 2 2 2 2 3 1\n",
-      " 3 1 1 2 0 4 1 1 3 4 2 2 3 1 2 2 2 2 1 2 4 1 1 2 2 3]\n",
-      "(array([ 2, 10, 28, 32, 33, 46, 50, 56, 59, 60, 72, 74, 79, 82, 83, 86, 94,\n",
-      "       99]),)\n"
+      "[1 1 3 1 3 2 3 2 0 1 1 2 1 1 3 2 1 4 1 3 0 2 1 1 2 1 2 1 1 2 1 3 1 4 1 1 2\n",
+      " 3 1 3 1 2 1 3 1 2 1 1 1 1 2 3 3 1 1 0 2 2 1 1 1 1 2 5 1 3 3 1 0 1 1 2 1 1\n",
+      " 1 4 0 3 0 1 2 4 2 1 2 1 1 2 2 2 2 1 1 1 2 2 1 2 2 2]\n",
+      "(array([ 2,  4,  6, 14, 17, 19, 31, 33, 37, 39, 43, 51, 52, 63, 65, 66, 75,\n",
+      "       77, 81]),)\n"
      ]
     }
    ],
@@ -135,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00762262])}\n"
+      "{'eps_sigma2': array([0.00609132])}\n"
      ]
     }
    ],
@@ -152,17 +159,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.143368527 (split, n = 360)\n",
-      "\tVal: -0.026016822 (leaf, n = 68)\n",
-      "\tX_1 <= 0.248643965 (split, n = 292)\n",
-      "\t\tVal: 0.038448609 (leaf, n = 60)\n",
-      "\t\tX_0 <= 0.852566779 (split, n = 232)\n",
-      "\t\t\tVal: -0.038391128 (leaf, n = 191)\n",
-      "\t\t\tVal: -0.000065526 (leaf, n = 41)\n",
-      "[ 0 -1  1 -2 -2 -1  0 -2 -2 -2 -2 -2 -2 -1 -1 -2]\n",
-      "[        nan -0.02601682         nan         nan         nan  0.03844861\n",
-      "         nan         nan         nan         nan         nan         nan\n",
-      "         nan -0.03839113 -0.00006553         nan]\n"
+      "X_0 <= 0.434105724 (split, n = 360)\n",
+      "\tVal: -0.002246719 (leaf, n = 157)\n",
+      "\tVal: 0.038378350 (leaf, n = 203)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.00224672  0.03837835         nan         nan         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
@@ -183,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-22 14:25:06,601:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-07-06 08:19:13,871:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -250,8 +252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.39571475  0.32425331  0.36478581  0.3591502   0.05786393  0.25650243\n",
-      "  0.10105007  0.29788602  0.37173162  0.12596985 -0.01500199  0.31117199]\n",
+      "[ 0.37678917  0.25270448  0.40240953  0.34834934 -0.00580348  0.35338093\n",
+      "  0.04660577  0.26553896  0.36365574  0.11581209 -0.05939649  0.33455346]\n",
       "[ 0.3528354   0.44447932  0.37951478  0.29131493 -0.00210506  0.21691883\n",
       "  0.03299222  0.28777376  0.3368794  -0.09693494  0.04100322  0.21133111]\n"
      ]
@@ -278,26 +280,6 @@
    "source": [
     "if all([(bart.trace[-1].trees[i].evaluate()[range(X_train.shape[0]), ] == bart.trace[-1].trees[i].evaluate(X_train)).all()\n",
     "            for i in range(100)]):\n",
-    "    print(\"True\")\n",
-    "else:\n",
-    "    print(\"False\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "if np.allclose(bart.trace[-1].evaluate()[range(X_train.shape[0]), ], bart.trace[-1].evaluate(X_train)):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
