--- a/notebooks/test_mushroom.ipynb
+++ b/notebooks/test_mushroom.ipynb
@@ -162,7 +162,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 11/11 [00:04<00:00,  2.73it/s]\n"
+            "Iterations: 100%|██████████| 11/11 [00:04<00:00,  2.69it/s]\n"
           ]
         },
         {
@@ -227,14 +227,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations:   0%|          | 0/1500 [00:00<?, ?it/s]"
+            "Iterations:   1%|          | 9/1500 [00:00<00:16, 89.99it/s]"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1500/1500 [00:28<00:00, 52.58it/s]\n"
+            "Iterations: 100%|██████████| 1500/1500 [00:25<00:00, 58.14it/s]\n"
           ]
         },
         {
