Slightly improve LogisticBART speed
Also add numba cache (only affects the compile‐time cost) & fix test_speed.py

--- a/notebooks/test_mushroom.ipynb
+++ b/notebooks/test_mushroom.ipynb
@@ -19,7 +19,7 @@
         "from sklearn.datasets import fetch_openml\n",
         "import pandas as pd\n",
         "from bart_playground import *\n",
-        "from bart_playground.bart import DefaultBART"
+        "from bart_playground.bart import DefaultBART, LogisticBART"
       ]
     },
     {
@@ -30,7 +30,7 @@
       "source": [
         "# Parameters\n",
         "N_TREES = 50\n",
-        "NDPOST = 1500\n",
+        "NDPOST = 500\n",
         "NSKIP = 0\n",
         "RANDOM_STATE = 42\n",
         "\n",
@@ -164,14 +164,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 11/11 [00:02<00:00,  5.50it/s]\n"
+            "Iterations: 100%|██████████| 11/11 [00:00<00:00, 14.00it/s]\n",
+            "Iterations: 100%|██████████| 11/11 [00:00<00:00, 11.10it/s]\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "array([0.06900825, 0.92950991, 1.00239905, ..., 0.75175489, 0.32700325,\n",
-              "       1.03488352])"
+              "array([0, 1, 1, ..., 1, 0, 1])"
             ]
           },
           "execution_count": 7,
@@ -181,6 +181,10 @@
       ],
       "source": [
         "ini_bart = DefaultBART(n_trees=N_TREES, ndpost=10, nskip=1, random_state=RANDOM_STATE)\n",
+        "ini_bart.fit(X, y)\n",
+        "ini_bart.predict(X)\n",
+        "\n",
+        "ini_bart = LogisticBART(n_trees=N_TREES, ndpost=10, nskip=1, random_state=RANDOM_STATE)\n",
         "ini_bart.fit(X, y)\n",
         "ini_bart.predict(X)"
       ]
@@ -192,12 +196,12 @@
       "outputs": [],
       "source": [
         "\n",
-        "def record_evaluation_results(dataset_name, X, y):\n",
+        "def record_evaluation_results(X, y, BARTClass=DefaultBART):\n",
         "    global bart, X_test, y_test\n",
         "    \n",
         "    # Initialize BART model\n",
-        "    bart = DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE)\n",
-        "    \n",
+        "    bart = BARTClass(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE)\n",
+        "\n",
         "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=RANDOM_STATE)\n",
         "    # Fit the model\n",
         "    bart.fit(X_train, y_train)\n",
@@ -217,6 +221,76 @@
     {
       "cell_type": "code",
       "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations:   0%|          | 0/500 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 500/500 [00:12<00:00, 39.45it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Log Loss: 0.2590, Accuracy: 0.9925, ROC AUC: 0.9923\n"
+          ]
+        }
+      ],
+      "source": [
+        "record_evaluation_results(X, y, LogisticBART)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations:   0%|          | 0/500 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 500/500 [00:15<00:00, 31.60it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Log Loss: 0.2590, Accuracy: 0.9925, ROC AUC: 0.9923\n",
+            " \n",
+            "*** Profile stats marshalled to file 'temp_profile.prof'.\n"
+          ]
+        }
+      ],
+      "source": [
+        "%prun -s cumtime -D temp_profile.prof -q record_evaluation_results(X, y, LogisticBART)\n",
+        "\n",
+        "fname = \"profile_mushroom_log\"\n",
+        "\n",
+        "!mv temp_profile.prof {fname}.prof\n",
+        "!gprof2dot -f pstats {fname}.prof -o {fname}.dot\n",
+        "!dot -Tpng {fname}.dot -o {fname}.png"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -244,7 +318,7 @@
         }
       ],
       "source": [
-        "%prun -s cumtime -D temp_profile.prof -q record_evaluation_results(\"Mushroom\", X, y)\n",
+        "%prun -s cumtime -D temp_profile.prof -q record_evaluation_results(X, y)\n",
         "\n",
         "fname = \"profile_mushroom\"\n",
         "\n",
