Add TEAgents and one-hot encoding for LogisticBART

--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,9 +68,7 @@
         "    \n",
         "    return X, y_arm\n",
         "\n",
-        "def load_mushroom_encoded():\n",
-        "    X, y_arm = load_mushroom()\n",
-        "    \n",
+        "def load_mushroom_encoded(X, y_arm):\n",
         "    n_arm = np.max(y_arm) + 1\n",
         "    dim = X.shape[1] * n_arm # total number of encoded covariates (location-encoded for each arm) \n",
         "    act_dim = X.shape[1] # number of covariates\n",
@@ -82,12 +80,27 @@
         "        if y_arm[cursor] == a:\n",
         "            rewards[cursor] = 1 # reward is 1 if the true category matches the chosen arm\n",
         "\n",
+        "    return covariates, rewards\n",
+        "\n",
+        "def load_mushroom_encoded_hot(X, y_arm):\n",
+        "    n_arm = np.max(y_arm) + 1\n",
+        "    dim = X.shape[1] + n_arm # total number of encoded covariates (onehot-encoded for each arm) \n",
+        "    act_dim = X.shape[1] # number of covariates\n",
+        "    covariates = np.zeros((X.shape[0], dim))\n",
+        "    rewards = np.zeros((X.shape[0], ))\n",
+        "    for cursor in range(X.shape[0]):\n",
+        "        a = np.random.randint(0, n_arm)\n",
+        "        covariates[cursor, :act_dim] = X[cursor]\n",
+        "        covariates[cursor, act_dim + a] = 1 # one-hot encoding\n",
+        "        if y_arm[cursor] == a:\n",
+        "            rewards[cursor] = 1 # reward is 1 if the true category matches the chosen arm\n",
+        "\n",
         "    return covariates, rewards"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,14 +120,15 @@
         "    np.random.seed(RANDOM_STATE)\n",
         "    \n",
         "    X_mushroom, y_mushroom = load_mushroom()\n",
-        "    X_mr_encoded, y_mr_encoded = load_mushroom_encoded()\n",
+        "    X_mr_encoded, y_mr_encoded = load_mushroom_encoded(X_mushroom, y_mushroom)\n",
         "    \n",
         "    return {\n",
-        "        \"Synthetic\": (X_syn, y_syn),\n",
-        "        \"Breast Cancer\": (X_bc, y_bc),\n",
-        "        \"Wine Binary\": (X_wine, y_wine),\n",
-        "        \"Mushroom\": (X_mushroom, y_mushroom),\n",
-        "        \"Mushroom Encoded\": (X_mr_encoded, y_mr_encoded)\n",
+        "        # \"Synthetic\": (X_syn, y_syn),\n",
+        "        # \"Breast Cancer\": (X_bc, y_bc),\n",
+        "        # \"Wine Binary\": (X_wine, y_wine),\n",
+        "        # \"Mushroom\": (X_mushroom, y_mushroom),\n",
+        "        # \"Mushroom Encoded\": (X_mr_encoded, y_mr_encoded),\n",
+        "        \"Mushroom Encoded Hot\": load_mushroom_encoded_hot(X_mushroom, y_mushroom),\n",
         "    }"
       ]
     },
@@ -127,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -165,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -233,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -246,7 +260,7 @@
         "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
         "    \n",
         "    if dataset_name == \"Mushroom\" or dataset_name == \"Mushroom Encoded\":\n",
-        "        test_size = 0.975\n",
+        "        test_size = 0.3\n",
         "    else:\n",
         "        test_size = 0.3\n",
         "    # Split data\n",
@@ -288,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -301,28 +315,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dataset: Synthetic\n",
-            "X shape: (400, 8), y shape: (400,)\n",
-            "y distribution: {0: 0.5, 1: 0.5}\n",
-            "Dataset: Breast Cancer\n",
-            "X shape: (569, 30), y shape: (569,)\n",
-            "y distribution: {1: 0.6274165202108963, 0: 0.37258347978910367}\n",
-            "Dataset: Wine Binary\n",
-            "X shape: (178, 13), y shape: (178,)\n",
-            "y distribution: {0: 0.6685393258426966, 1: 0.33146067415730335}\n",
-            "Dataset: Mushroom\n",
-            "X shape: (2000, 22), y shape: (2000,)\n",
-            "y distribution: {0: 0.5165, 1: 0.4835}\n",
-            "Dataset: Mushroom Encoded\n",
-            "X shape: (2000, 44), y shape: (2000,)\n",
-            "y distribution: {0.0: 0.5055, 1.0: 0.4945}\n"
+            "Dataset: Mushroom Encoded Hot\n",
+            "X shape: (2000, 24), y shape: (2000,)\n",
+            "y distribution: {0.0: 0.5045, 1.0: 0.4955}\n"
           ]
         }
       ],
@@ -343,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -354,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -362,15 +364,15 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "=== Testing on Mushroom Encoded ===\n",
+            "=== Testing on Mushroom Encoded Hot ===\n",
             "  Training XGBClassifier...\n",
-            "    Acc: 0.817, LogLoss: 3.783, AUC: 0.8178\n",
+            "    Acc: 0.970, LogLoss: 0.622, AUC: 0.9699\n",
             "    ECE: nan, MCE: nan\n",
             "  Training XGBRegressor...\n",
-            "    Acc: 0.808, LogLoss: 0.436, AUC: 0.8877\n",
-            "    ECE: 0.0446, MCE: 0.1805\n",
+            "    Acc: 0.968, LogLoss: 0.141, AUC: 0.9899\n",
+            "    ECE: 0.0152, MCE: 0.1041\n",
             "  Training RFClassifier...\n",
-            "    Acc: 0.831, LogLoss: 3.496, AUC: 0.8317\n",
+            "    Acc: 0.973, LogLoss: 0.553, AUC: 0.9732\n",
             "    ECE: nan, MCE: nan\n",
             "  Training RFRegressor...\n"
           ]
@@ -379,7 +381,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "INFO:2025-06-09 09:24:15,458:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+            "INFO:2025-07-07 11:14:15,776:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
             "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
           ]
         },
@@ -387,11 +389,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.852, LogLoss: 0.370, AUC: 0.9384\n",
-            "    ECE: 0.0937, MCE: 0.1317\n",
+            "    Acc: 0.982, LogLoss: 0.112, AUC: 0.9989\n",
+            "    ECE: 0.0751, MCE: 0.2422\n",
             "  Training Bartz...\n",
-            "    Acc: 0.779, LogLoss: 0.589, AUC: 0.8856\n",
-            "    ECE: nan, MCE: nan\n",
+            "    Acc: 0.998, LogLoss: 0.029, AUC: 0.9999\n",
+            "    ECE: 0.0183, MCE: 0.3060\n",
             "  Training DefaultBART...\n"
           ]
         },
@@ -399,31 +401,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:15<00:00, 77.58it/s] \n"
+            "Iterations: 100%|██████████| 1200/1200 [00:06<00:00, 199.62it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.797, LogLoss: 0.600, AUC: 0.9125\n",
-            "    ECE: nan, MCE: nan\n",
-            "  Training ProbitBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:12<00:00, 98.38it/s] \n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.808, LogLoss: 0.678, AUC: 0.8983\n",
-            "    ECE: nan, MCE: nan\n",
+            "    Acc: 0.985, LogLoss: 0.077, AUC: 0.9977\n",
+            "    ECE: 0.0403, MCE: 0.3252\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -431,15 +417,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:23<00:00, 51.46it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:11<00:00, 104.34it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.826, LogLoss: 0.452, AUC: 0.9271\n",
-            "    ECE: 0.1653, MCE: 0.2192\n"
+            "    Acc: 0.922, LogLoss: 0.213, AUC: 0.9768\n",
+            "    ECE: 0.0560, MCE: 0.1184\n"
           ]
         }
       ],
@@ -462,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -475,41 +461,49 @@
             "============================================================\n",
             "\n",
             "Accuracy:\n",
-            "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
-            "Dataset                                                                        \n",
-            "Mushroom Encoded  0.779        0.797         0.826       0.808         0.831   \n",
+            "Model                 Bartz  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                \n",
+            "Mushroom Encoded Hot  0.998        0.985         0.922         0.973   \n",
             "\n",
-            "Model             RFRegressor  XGBClassifier  XGBRegressor  \n",
-            "Dataset                                                     \n",
-            "Mushroom Encoded        0.852          0.817         0.808  \n",
+            "Model                 RFRegressor  XGBClassifier  XGBRegressor  \n",
+            "Dataset                                                         \n",
+            "Mushroom Encoded Hot        0.982           0.97         0.968  \n",
             "\n",
             "AUC:\n",
-            "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
-            "Dataset                                                                        \n",
-            "Mushroom Encoded  0.886        0.913         0.927       0.898         0.832   \n",
+            "Model                 Bartz  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                \n",
+            "Mushroom Encoded Hot    1.0        0.998         0.977         0.973   \n",
             "\n",
-            "Model             RFRegressor  XGBClassifier  XGBRegressor  \n",
-            "Dataset                                                     \n",
-            "Mushroom Encoded        0.938          0.818         0.888  \n",
+            "Model                 RFRegressor  XGBClassifier  XGBRegressor  \n",
+            "Dataset                                                         \n",
+            "Mushroom Encoded Hot        0.999           0.97          0.99  \n",
             "\n",
             "LogLoss:\n",
-            "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
-            "Dataset                                                                        \n",
-            "Mushroom Encoded  0.589          0.6         0.452       0.678         3.496   \n",
+            "Model                 Bartz  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                \n",
+            "Mushroom Encoded Hot  0.029        0.077         0.213         0.553   \n",
             "\n",
-            "Model             RFRegressor  XGBClassifier  XGBRegressor  \n",
-            "Dataset                                                     \n",
-            "Mushroom Encoded         0.37          3.783         0.436  \n",
+            "Model                 RFRegressor  XGBClassifier  XGBRegressor  \n",
+            "Dataset                                                         \n",
+            "Mushroom Encoded Hot        0.112          0.622         0.141  \n",
             "\n",
             "ECE:\n",
-            "Model             LogisticBART  RFRegressor  XGBRegressor\n",
-            "Dataset                                                  \n",
-            "Mushroom Encoded         0.165        0.094         0.045\n",
+            "Model                 Bartz  DefaultBART  LogisticBART  RFRegressor  \\\n",
+            "Dataset                                                               \n",
+            "Mushroom Encoded Hot  0.018         0.04         0.056        0.075   \n",
+            "\n",
+            "Model                 XGBRegressor  \n",
+            "Dataset                             \n",
+            "Mushroom Encoded Hot         0.015  \n",
             "\n",
             "MCE:\n",
-            "Model             LogisticBART  RFRegressor  XGBRegressor\n",
-            "Dataset                                                  \n",
-            "Mushroom Encoded         0.219        0.132          0.18\n"
+            "Model                 Bartz  DefaultBART  LogisticBART  RFRegressor  \\\n",
+            "Dataset                                                               \n",
+            "Mushroom Encoded Hot  0.306        0.325         0.118        0.242   \n",
+            "\n",
+            "Model                 XGBRegressor  \n",
+            "Dataset                             \n",
+            "Mushroom Encoded Hot         0.104  \n"
           ]
         }
       ],
