--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -345,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bartpg",
+   "display_name": "bart-playground-env",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
