--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 138.52it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:06<00:00, 43.70it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:05<00:00, 89.30it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 59.88it/s]"
      ]
     },
     {
@@ -91,6 +91,13 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -113,7 +120,7 @@
       "[1 3 1 3 2 2 3 1 1 2 0 1 2 2 3 2 1 1 2 2 0 3 4 2 2 2 1 1 1 2 2 1 1 0 1 1 1\n",
       " 2 0 1 1 3 1 2 1 2 1 2 3 5 3 1 1 1 1 1 2 1 2 1 3 1 2 1 0 1 2 1 1 0 0 1 2 2\n",
       " 1 0 2 2 1 1 1 1 2 1 1 1 5 1 2 1 0 1 0 1 1 2 2 2 2 1]\n",
-      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86]),)\n"
+      "(array([ 1,  3,  6, 14, 21, 22, 41, 48, 49, 50, 60, 86], dtype=int64),)\n"
      ]
     }
    ],
@@ -133,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(8.8)"
+       "8.8"
       ]
      },
      "execution_count": 7,
@@ -173,14 +180,14 @@
      "text": [
       "X_0 <= 0.763697386 (split, n = 750)\n",
       "\tX_1 <= 0.514178932 (split, n = 562)\n",
-      "\t\tVal: -0.000567809 (leaf, n = 294)\n",
-      "\t\tVal: 0.024965059 (leaf, n = 268)\n",
+      "\t\tVal: -0.000567858 (leaf, n = 294)\n",
+      "\t\tVal: 0.024965113 (leaf, n = 268)\n",
       "\tX_1 <= 0.092173070 (split, n = 188)\n",
-      "\t\tVal: 0.014175317 (leaf, n = 8)\n",
-      "\t\tVal: -0.013555662 (leaf, n = 180)\n",
+      "\t\tVal: 0.014175153 (leaf, n = 8)\n",
+      "\t\tVal: -0.013555516 (leaf, n = 180)\n",
       "[ 0  1  1 -1 -1 -1 -1 -2]\n",
-      "[        nan         nan         nan -0.00056781  0.02496506  0.01417532\n",
-      " -0.01355566         nan]\n"
+      "[        nan         nan         nan -0.00056786  0.02496511  0.01417515\n",
+      " -0.01355552         nan]\n"
      ]
     }
    ],
@@ -202,17 +209,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-07-06 18:44:26,046:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+      "INFO:2025-07-22 22:30:49,857:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-07-22 22:30:49,864:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
-      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
+      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.23 A_prune=0.26 (burnin)\n",
+      "Iteration 200/300 P_grow=0.55 P_prune=0.45 A_grow=0.25 A_prune=0.40\n",
+      "Iteration 300/300 P_grow=0.58 P_prune=0.42 A_grow=0.31 A_prune=0.29\n"
      ]
     }
    ],
@@ -235,10 +244,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.016913204730421582,\n",
+       "{'bart': 0.016913211997082626,\n",
        " 'rf': 0.01570244066836391,\n",
        " 'lr': 0.04058944845865094,\n",
-       " 'btz': 0.01451765109911874}"
+       " 'btz': 0.0161684617715213}"
       ]
      },
      "execution_count": 11,
@@ -269,8 +278,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.31316479  0.28736399  0.31458282  0.30757782 -0.39123349  0.07929083\n",
-      " -0.02212593  0.07817361  0.24023421  0.34557927 -0.09955957  0.03123177]\n",
+      "[ 0.31316491  0.28736366  0.31458231  0.30757715 -0.39123337  0.07929126\n",
+      " -0.0221257   0.07817372  0.24023455  0.34557954 -0.09955975  0.03123194]\n",
       "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
       " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
      ]
@@ -345,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart-playground-env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
