--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -62,12 +62,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 42.62it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 22.94it/s]\n"
      ]
     }
    ],
    "source": [
-    "bart1 = DefaultBART(ndpost=50, nskip=20, n_trees=100)\n",
+    "bart1 = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=1)\n",
     "bart1.fit(X_train, y_train)"
    ]
   },
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 22.23it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:06<00:00, 10.16it/s]\n"
      ]
     },
     {
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "bart = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=1)\n",
+    "bart = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=10)\n",
     "%prun -s cumtime -D profile_multi.prof -q bart.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_multi.prof -o profile_multi.dot\n",
     "!dot -Tpng profile_multi.dot -o profile_multi.png"
@@ -108,9 +108,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-07-22 22:31:58,773:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-07-23 16:14:48,578:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-07-22 22:31:58,776:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-07-23 16:14:48,582:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     }
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 63.57it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:00<00:00, 70.22it/s]"
      ]
     },
     {
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022203261771690845,\n",
+       "{'bart': 0.024457179381055582,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.022409798535525886,\n",
