Change abs tol to relative tol when removing rev candidate

--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -15,6 +15,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bartz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -36,13 +45,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from bart_playground import *\n",
-    "import bartz\n",
     "import arviz as az"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 23.25it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 40.38it/s]\n"
      ]
     }
    ],
@@ -73,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:06<00:00, 11.38it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 23.40it/s]"
      ]
     },
     {
@@ -108,17 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-07-23 22:21:01,221:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-07-23 22:21:01,225:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-07-29 19:27:55,086:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "......................................................................"
      ]
     }
    ],
@@ -135,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 62.84it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:00<00:00, 141.96it/s]"
      ]
     },
     {
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,11 +193,11 @@
        "{'bart': 0.022782931472605447,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.022409798535525886,\n",
+       " 'btz': 0.0246273977920971,\n",
        " 'bart_default': 0.02383254718512391}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
