--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 40.38it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 45.30it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 23.40it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 20.51it/s]"
      ]
     },
     {
@@ -123,15 +123,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-07-29 19:27:55,086:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-01 11:56:04,497:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-08-01 11:56:04,501:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "......................................................................"
      ]
     }
    ],
@@ -155,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:00<00:00, 141.96it/s]"
+      "Iterations: 100%|██████████| 70/70 [00:00<00:00, 129.35it/s]"
      ]
     },
     {
@@ -193,7 +188,7 @@
        "{'bart': 0.022782931472605447,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.0246273977920971,\n",
+       " 'btz': 0.022409798535525886,\n",
        " 'bart_default': 0.02383254718512391}"
       ]
      },
@@ -220,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
