--- a/notebooks/test_sigma2_Cal.ipynb
+++ b/notebooks/test_sigma2_Cal.ipynb
@@ -172,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
