--- a/notebooks/01_debug_profile_2.ipynb
+++ b/notebooks/01_debug_profile_2.ipynb
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
-    "#proposal_probs = {\"multi_grow\": 0.5, \"multi_prune\": 0.5}\n",
+    "#proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
+    "proposal_probs = {\"multi_grow\": 0.5, \"multi_prune\": 0.5}\n",
     "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 38.58it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 34.57it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:13<00:00, 22.40it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:14<00:00, 21.35it/s]"
      ]
     },
     {
@@ -96,7 +96,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file 'profile_multi.prof'.\n"
+      "*** Profile stats marshalled to file 'profile_multi2.prof'.\n"
      ]
     },
     {
@@ -109,9 +109,9 @@
    ],
    "source": [
     "bart = MultiBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs, multi_tries=10)\n",
-    "%prun -s cumtime -D profile_multi.prof -q bart.fit(X_train, y_train)\n",
-    "!gprof2dot -f pstats profile_multi.prof -o profile_multi.dot\n",
-    "!dot -Tpng profile_multi.dot -o profile_multi.png"
+    "%prun -s cumtime -D profile_multi2.prof -q bart.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats profile_multi2.prof -o profile_multi2.dot\n",
+    "!dot -Tpng profile_multi2.dot -o profile_multi2.png"
    ]
   },
   {
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-04 19:15:36,742:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-04 19:17:20,857:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 124.16it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:03<00:00, 94.22it/s] "
      ]
     },
     {
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "default_proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
+    "default_proposal_probs = {\"grow\": 0.5, \"prune\": 0.5}\n",
     "bart_default = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=default_proposal_probs)\n",
     "%prun -s cumtime -D profile_bart.prof -q bart_default.fit(X_train, y_train)\n",
     "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
@@ -195,11 +195,11 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.02254935292933836,\n",
+       "{'bart': 0.021507854236400843,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
        " 'btz': 0.02515919424231273,\n",
-       " 'bart_default': 0.0211558149339335}"
+       " 'bart_default': 0.02355758523954803}"
       ]
      },
      "execution_count": 9,
