--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:03<00:00, 18.52it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 34.22it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:11<00:00, 25.56it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:10<00:00, 28.13it/s]"
      ]
     },
     {
@@ -123,9 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-12 02:19:32,015:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "INFO:2025-08-12 02:19:32,021:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-12 19:12:49,724:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -133,9 +131,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.36 A_prune=0.36 (burnin)\n",
-      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.35 A_prune=0.37\n",
-      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.39 A_prune=0.40\n"
+      "....................................................................................................\n",
+      "It 100/300 grow P=60% A=40%, prune P=40% A=38%, fill=6% (burnin)\n",
+      "....................................................................................................\n",
+      "It 200/300 grow P=60% A=35%, prune P=40% A=38%, fill=6%\n",
+      "....................................................................................................\n",
+      "It 300/300 grow P=55% A=25%, prune P=45% A=29%, fill=6%\n"
      ]
     }
    ],
@@ -159,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 136.22it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 135.67it/s]"
      ]
     },
     {
@@ -197,7 +198,7 @@
        "{'bart': 0.022739425299116663,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02328283761397566,\n",
+       " 'btz': 0.02515919424231273,\n",
        " 'bart_default': 0.0211558149339335}"
       ]
      },
@@ -224,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bart_env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
