Apply to no-copy version

--- a/notebooks/CalHousing_profile.ipynb
+++ b/notebooks/CalHousing_profile.ipynb
@@ -54,10 +54,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
-    "#proposal_probs = {\"multi_grow\": 0.5, \"multi_prune\": 0.5}\n",
-    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
-    "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
+    "data = fetch_california_housing(as_frame=True)\n",
+    "\n",
+    "X = data.data\n",
+    "y = data.target\n",
+    "\n",
+    "X = X.values.astype(float)\n",
+    "y = np.array(y).reshape(-1)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
   },
@@ -70,11 +75,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 37.24it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:06<00:00, 11.48it/s]\n"
      ]
     }
    ],
    "source": [
+    "proposal_probs = {\"multi_grow\": 0.25, \"multi_prune\": 0.25, \"multi_change\": 0.4, \"multi_swap\": 0.1}\n",
+    "#proposal_probs = {\"multi_grow\": 0.5, \"multi_prune\": 0.5}\n",
     "bart1 = MultiBART(ndpost=50, nskip=20, n_trees=100, proposal_probs=proposal_probs, multi_tries=1)\n",
     "bart1.fit(X_train, y_train)"
    ]
@@ -88,7 +95,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 31.40it/s]"
+      "Iterations: 100%|██████████| 300/300 [01:23<00:00,  3.57it/s]"
      ]
     },
     {
@@ -96,7 +103,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file 'profile_multi.prof'.\n"
+      "*** Profile stats marshalled to file 'Cal_profile_multi.prof'.\n"
      ]
     },
     {
@@ -109,9 +116,9 @@
    ],
    "source": [
     "bart = MultiBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=proposal_probs, multi_tries=10)\n",
-    "%prun -s cumtime -D profile_multi.prof -q bart.fit(X_train, y_train)\n",
-    "!gprof2dot -f pstats profile_multi.prof -o profile_multi.dot\n",
-    "!dot -Tpng profile_multi.dot -o profile_multi.png"
+    "%prun -s cumtime -D Cal_profile_multi.prof -q bart.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats Cal_profile_multi.prof -o Cal_profile_multi.dot\n",
+    "!dot -Tpng Cal_profile_multi.dot -o Cal_profile_multi.png"
    ]
   },
   {
@@ -123,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-18 16:58:58,192:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-18 17:11:23,564:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -132,11 +139,11 @@
      "output_type": "stream",
      "text": [
       "....................................................................................................\n",
-      "It 100/300 grow P=60% A=40%, prune P=40% A=38%, fill=6% (burnin)\n",
+      "It 100/300 grow P=58% A=9%, prune P=42% A=12%, fill=8% (burnin)\n",
       "....................................................................................................\n",
-      "It 200/300 grow P=60% A=35%, prune P=40% A=38%, fill=6%\n",
+      "It 200/300 grow P=57% A=12%, prune P=43% A=12%, fill=9%\n",
       "....................................................................................................\n",
-      "It 300/300 grow P=55% A=25%, prune P=45% A=29%, fill=6%\n"
+      "It 300/300 grow P=53% A=15%, prune P=47% A=11%, fill=10%\n"
      ]
     }
    ],
@@ -160,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 139.71it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 31.95it/s]"
      ]
     },
     {
@@ -168,7 +175,7 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
+      "*** Profile stats marshalled to file 'Cal_profile_bart.prof'.\n"
      ]
     },
     {
@@ -182,9 +189,9 @@
    "source": [
     "default_proposal_probs = {\"grow\": 0.25, \"prune\": 0.25, \"change\": 0.4, \"swap\": 0.1}\n",
     "bart_default = DefaultBART(ndpost=200, nskip=100, n_trees=100, proposal_probs=default_proposal_probs)\n",
-    "%prun -s cumtime -D profile_bart.prof -q bart_default.fit(X_train, y_train)\n",
-    "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
-    "!dot -Tpng profile_bart.dot -o profile_bart.png"
+    "%prun -s cumtime -D Cal_profile_bart.prof -q bart_default.fit(X_train, y_train)\n",
+    "!gprof2dot -f pstats Cal_profile_bart.prof -o Cal_profile_bart.dot\n",
+    "!dot -Tpng Cal_profile_bart.dot -o Cal_profile_bart.png"
    ]
   },
   {
@@ -195,11 +202,11 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022739425299116663,\n",
-       " 'rf': 0.022139023845392215,\n",
-       " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02515919424231273,\n",
-       " 'bart_default': 0.0211558149339335}"
+       "{'bart': 0.221192917849968,\n",
+       " 'rf': 0.2542358390056568,\n",
+       " 'lr': 0.5411287478470684,\n",
+       " 'btz': 0.3176016792627629,\n",
+       " 'bart_default': 0.25522702814372716}"
       ]
      },
      "execution_count": 9,
