--- a/notebooks/test_simulate.ipynb
+++ b/notebooks/test_simulate.ipynb
@@ -80,7 +80,7 @@
     "# Simulate splitting the root node\n",
     "sim_leaf_ids, sim_n, sim_vars = tree.simulate_split_leaf(node_id=1, var=1, threshold=0.3)\n",
     "\n",
-    "lkhd_sim = move._calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals)\n",
+    "lkhd_sim = likelihood.calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals, global_params[\"eps_sigma2\"][0])\n",
     "\n",
     "\n",
     "print(\"Old leaf_ids:\", tree.leaf_ids)\n",
@@ -167,7 +167,7 @@
     "sim_leaf_ids, sim_n, sim_vars = tree.simulate_prune_split(node_id=1)\n",
     "\n",
     "# Calculate simulated likelihood\n",
-    "lkhd_sim = move._calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals)\n",
+    "lkhd_sim = likelihood.calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals, global_params[\"eps_sigma2\"][0])\n",
     "\n",
     "print(\"Old leaf_ids:\", tree.leaf_ids)\n",
     "print(\"Old n:\", tree.n)\n",
@@ -262,7 +262,7 @@
     "\n",
     "node_id = 0\n",
     "sim_leaf_ids, sim_n, sim_vars = tree.simulate_change_split(node_id=node_id, var=1, threshold=0.6)\n",
-    "lkhd_sim = move._calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals)\n",
+    "lkhd_sim = likelihood.calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals, global_params[\"eps_sigma2\"][0])\n",
     "\n",
     "print(\"Old tree structure:\", tree)\n",
     "print(\"Old leaf_ids:\", tree.leaf_ids)\n",
@@ -430,7 +430,7 @@
     "# Simulate swapping the split between root (0) and left child (1)\n",
     "parent_id = 0\n",
     "sim_leaf_ids, sim_n, sim_vars = tree.simulate_swap_split(parent_id=parent_id, child_id=1)\n",
-    "lkhd_sim = move._calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals)\n",
+    "lkhd_sim = likelihood.calculate_simulated_likelihood(sim_leaf_ids, sim_n, residuals, global_params[\"eps_sigma2\"][0])\n",
     "\n",
     "print(\"Old leaf_ids:\", tree.leaf_ids)\n",
     "print(\"Old n:\", tree.n)\n",
