--- a/notebooks/01_debug_profile.ipynb
+++ b/notebooks/01_debug_profile.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 37.24it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 25.91it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 31.40it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:12<00:00, 24.00it/s]"
      ]
     },
     {
@@ -123,7 +123,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-18 16:58:58,192:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-24 23:42:53,734:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-08-24 23:42:53,737:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -131,12 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "....................................................................................................\n",
-      "It 100/300 grow P=60% A=40%, prune P=40% A=38%, fill=6% (burnin)\n",
-      "....................................................................................................\n",
-      "It 200/300 grow P=60% A=35%, prune P=40% A=38%, fill=6%\n",
-      "....................................................................................................\n",
-      "It 300/300 grow P=55% A=25%, prune P=45% A=29%, fill=6%\n"
+      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.36 A_prune=0.36 (burnin)\n",
+      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.35 A_prune=0.37\n",
+      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.39 A_prune=0.40\n"
      ]
     }
    ],
@@ -160,7 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 139.71it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 141.40it/s]\n"
      ]
     },
     {
@@ -169,13 +168,6 @@
      "text": [
       " \n",
       "*** Profile stats marshalled to file 'profile_bart.prof'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -195,10 +187,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022739425299116663,\n",
+       "{'bart': 0.022506822841995337,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02515919424231273,\n",
+       " 'btz': 0.02328283761397566,\n",
        " 'bart_default': 0.0211558149339335}"
       ]
      },
@@ -225,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
