--- a/notebooks/01_debug_profile_2.ipynb
+++ b/notebooks/01_debug_profile_2.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 70/70 [00:02<00:00, 34.57it/s]\n"
+      "Iterations: 100%|██████████| 70/70 [00:01<00:00, 39.46it/s]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:14<00:00, 21.35it/s]"
+      "Iterations: 100%|██████████| 300/300 [00:15<00:00, 18.90it/s]"
      ]
     },
     {
@@ -123,7 +123,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-08-04 19:17:20,857:jax._src.xla_bridge:752: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
+      "INFO:2025-08-24 23:49:15,605:jax._src.xla_bridge:927: Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:jax._src.xla_bridge:Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "INFO:2025-08-24 23:49:15,610:jax._src.xla_bridge:927: Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': UNIMPLEMENTED: LoadPjrtPlugin is not implemented on windows yet.\n"
      ]
     },
@@ -131,12 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "....................................................................................................\n",
-      "It 100/300 grow P=60% A=40%, prune P=40% A=38%, fill=6% (burnin)\n",
-      "....................................................................................................\n",
-      "It 200/300 grow P=60% A=35%, prune P=40% A=38%, fill=6%\n",
-      "....................................................................................................\n",
-      "It 300/300 grow P=55% A=25%, prune P=45% A=29%, fill=6%\n"
+      "Iteration 100/300 P_grow=0.55 P_prune=0.45 A_grow=0.36 A_prune=0.36 (burnin)\n",
+      "Iteration 200/300 P_grow=0.57 P_prune=0.43 A_grow=0.35 A_prune=0.37\n",
+      "Iteration 300/300 P_grow=0.57 P_prune=0.43 A_grow=0.39 A_prune=0.40\n"
      ]
     }
    ],
@@ -160,7 +159,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:03<00:00, 94.22it/s] "
+      "Iterations: 100%|██████████| 300/300 [00:02<00:00, 118.39it/s]"
      ]
     },
     {
@@ -195,10 +194,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.021507854236400843,\n",
+       "{'bart': 0.024390277842273676,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.048045521328019404,\n",
-       " 'btz': 0.02515919424231273,\n",
+       " 'btz': 0.02328283761397566,\n",
        " 'bart_default': 0.02355758523954803}"
       ]
      },
@@ -225,7 +224,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bart_env",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
